--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,15 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.6.8
+    rev: v0.3.0
     hooks:
-      # Run the linter.
       - id: ruff
-        types_or: [python, pyi]
-        args: [--fix]
-      # Run isort
-      - id: ruff
-        types_or: [python, pyi]
-        name: ruff-isort
-        args: [--select, "I", --fix]
-      # Run the formatter.
+        args: [ --fix ]
       - id: ruff-format
-        types_or: [python, pyi]
-  - repo: https://github.com/google/yamlfmt
-    rev: v0.10.0
-    hooks:
-      - id: yamlfmt
-        args: [--conf, .yamlfmt.yaml]
